--- a/html/Index.html
+++ b/html/Index.html
@@ -18,6 +18,150 @@
 <body>
     <div id="header"></div>
     <div id="main">
+        <div class="pointer">
+            Главная > New In
+        </div>
+        <div class="new-in-wrapper">
+            <h2>NEW IN</h2>
+            <div class="sort-direction d-flex justify-content-end">
+                <div class="sort-text d-flex flex-wrap align-content-center">
+                    Сортировка
+                </div>
+                <div class="icon-wrapper">
+                    <object data="/html/source/icon/chevron-down-svgrepo-com.svg" type="image/svg+xml" width="24px" height="24px"></object>
+                </div>
+            </div>
+            <div class="cards-wrapper d-flex flex-wrap justify-content-between">
+                <div class="card">
+                    <button type="button" class="favourite d-flex flex-row-reverse justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod1.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Prada
+                            </div>
+                            <div class="description">
+                                топ с вырезом халтер
+                            </div>
+                            <div class="cost">
+                                20 000 &#x20bd;
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <button type="button" class="favourite d-flex justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod2.png">
+                        </div>
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                TOM FORD
+                            </div>
+                            <div class="description">
+                                клатч с тиснением под кожу крокодила
+                            </div>
+                            <div class="cost">
+                                15 000 &#x20bd;
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <button type="button" class="favourite d-flex justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod3.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Prada
+                            </div>
+                            <div class="description">
+                                замшевая юбка миди
+                            </div>
+                            <div class="cost">
+                                25 000 &#x20bd;
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <button type="button" class="favourite d-flex justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod4.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Saint Laurent
+                            </div>
+                            <div class="description">
+                                туфли д'Орсе
+                            </div>
+                            <div class="cost">
+                                10 000 &#x20bd;
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="presentation-wrapper d-flex flex-row justify-content-around">
+            <div class="presentation d-flex justify-content-center flex-wrap">
+                <div class="wrapper d-flex flex-column justify-content-center">
+                    <div class="header d-inline-flex justify-content-center">
+                        <h2 class="d-inline-flex">
+                            мир brunello cucinelli
+                        </h2>
+                    </div>
+                    <div class="text d-flex justify-content-center">
+                        <p>
+                            Один дизайнер, три города, три творческие личности. Мы запускаем новую рубрику The World Of, в котором покажем, как творения лучших дизайнеров носят разные люди со всего мира.
+                        </p>
+                    </div>
+                    <div class="link-button d-inline-flex justify-content-center">
+                        <a href="">
+                            <button type="button">Читать дальше</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="img-wrapper">
+                <img src="/html/source/img/image5.png">
+            </div>
+        </div>
     </div>
     <div id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
