UPDATE: Added question and subscribe section for Index.html. Index.html for laptop full screen. Added finished IndexForHim.html.

--- a/html/IndexForHim.html
+++ b/html/IndexForHim.html
@@ -40,20 +40,20 @@
                     </button>
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod1.png" alt="">
+                            <img src="/html/source/img/forHim/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                Prada
+                                FENDI
                             </div>
                             <div class="description">
-                                топ с вырезом халтер
+                                Куртка с D-образной пряжкой
                             </div>
                             <div class="cost">
-                                20 000 &#x20bd;
+                                30 000 &#x20bd;
                             </div>
                         </div>
                     </a>
@@ -66,20 +66,20 @@
                     </button>
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod2.png" alt="">
+                            <img src="/html/source/img/forHim/prod2.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                TOM FORD
+                                GUCCI
                             </div>
                             <div class="description">
-                                клатч с тиснением под кожу крокодила
+                                Дорожная сумка среднего размера
                             </div>
                             <div class="cost">
-                                15 000 &#x20bd;
+                                10 000 &#x20bd;
                             </div>
                         </div>
                     </a>
@@ -92,17 +92,17 @@
                     </button>
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod3.png" alt="">
+                            <img src="/html/source/img/forHim/prod3.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                Prada
+                                LEMAIRE
                             </div>
                             <div class="description">
-                                замшевая юбка миди
+                                брюки Twisted
                             </div>
                             <div class="cost">
                                 25 000 &#x20bd;
@@ -118,20 +118,20 @@
                     </button>
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod4.png" alt="">
+                            <img src="/html/source/img/forHim/prod4.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
                                 Новый сезон
                             </div>
                             <div class="brand">
-                                Saint Laurent
+                                Givenchy
                             </div>
                             <div class="description">
-                                туфли д'Орсе
+                                ботинки Bogs
                             </div>
                             <div class="cost">
-                                10 000 &#x20bd;
+                                6 000 &#x20bd;
                             </div>
                         </div>
                     </a>
@@ -159,14 +159,14 @@
                 </div>
             </div>
             <div class="img-wrapper">
-                <img src="/html/source/img/image5.png" alt="">
+                <img src="/html/source/img/forHim/image1.png" alt="">
             </div>
         </div>
         <div class="accessories-presentation-wrapper d-flex flex-row">
             <div class="accessories-presentation d-flex flex-column">
-                <img src="/html/source/img/image6.png" alt="">
-                <h2>Аксессуары для вечеринки</h2>
-                <p>Оцените праздничные туфли и сумки от Prada и других брендов.</p>
+                <img src="/html/source/img/forHim/image2.png" alt="">
+                <h2>Яркие рубашки</h2>
+                <p>Праздничные модели от Casablanka</p>
             </div>
         </div>
         <h3>Прозрачные ткани</h3>
@@ -179,20 +179,20 @@
                 </button>
                 <a href="">
                     <div class="card-body d-flex flex-column">
-                        <img src="/html/source/img/prod5.png" alt="">
+                        <img src="/html/source/img/forHim/prod5.png" alt="">
                     </div>
                     <div class="card-text">
                         <div class="season">
                             Новый сезон
                         </div>
                         <div class="brand">
-                            Simone Rocha
+                            Valentino Garavani
                         </div>
                         <div class="description">
-                            платье миди Creature
+                            джемпер
                         </div>
                         <div class="cost">
-                            20 000 &#x20bd;
+                            5 000 &#x20bd;
                         </div>
                     </div>
                 </a>
@@ -205,17 +205,43 @@
                 </button>
                 <a href="">
                     <div class="card-body d-flex flex-column">
-                        <img src="/html/source/img/prod6.png" alt="">
+                        <img src="/html/source/img/forHim/prod6.png" alt="">
                     </div>
                     <div class="card-text">
                         <div class="season">
                             Новый сезон
                         </div>
                         <div class="brand">
-                            Mugler
+                            Valentino Garavani
                         </div>
                         <div class="description">
-                            мюли Fang 20
+                            рубашка
+                        </div>
+                        <div class="cost">
+                            10 000 &#x20bd;
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="card">
+                <button type="button" class="favourite d-flex justify-content-end">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                    </svg>
+                </button>
+                <a href="">
+                    <div class="card-body d-flex flex-column">
+                        <img src="/html/source/img/forHim/prod7.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <div class="season">
+                            Новый сезон
+                        </div>
+                        <div class="brand">
+                            Valentino Garavani
+                        </div>
+                        <div class="description">
+                            брюки
                         </div>
                         <div class="cost">
                             15 000 &#x20bd;
@@ -231,46 +257,20 @@
                 </button>
                 <a href="">
                     <div class="card-body d-flex flex-column">
-                        <img src="/html/source/img/prod7.png" alt="">
+                        <img src="/html/source/img/forHim/prod8.png" alt="">
                     </div>
                     <div class="card-text">
                         <div class="season">
                             Новый сезон
                         </div>
                         <div class="brand">
-                            Oroenza Schouler
+                            Valentino Garavani
                         </div>
                         <div class="description">
-                            пальто Finch
+                            лоферы
                         </div>
                         <div class="cost">
-                            45 000 &#x20bd;
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <button type="button" class="favourite d-flex justify-content-end">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                    </svg>
-                </button>
-                <a href="">
-                    <div class="card-body d-flex flex-column">
-                        <img src="/html/source/img/prod8.png" alt="">
-                    </div>
-                    <div class="card-text">
-                        <div class="season">
-                            Новый сезон
-                        </div>
-                        <div class="brand">
-                            Docle & Gabana
-                        </div>
-                        <div class="description">
-                            сетчатая юбка-карандаш
-                        </div>
-                        <div class="cost">
-                            20 000 &#x20bd;
+                            25 000 &#x20bd;
                         </div>
                     </div>
                 </a>
@@ -279,26 +279,26 @@
         <div class="topic-cards-wrapper d-flex flex-row justify-content-between">
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/topicImage1.png" alt="">
-                    <p>Лучшие пальто</p>
+                    <img src="/html/source/img/forHim/topicImage1.png" alt="">
+                    <p>Новинки PRADA</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/topicImage2.png" alt="">
-                    <p>Новые сумки</p>
+                    <img src="/html/source/img/forHim/topicImage2.png" alt="">
+                    <p>Лучшее от JACQUEMUS</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/topicImage3.png" alt="">
-                    <p>Главное от prada</p>
+                    <img src="/html/source/img/forHim/topicImage3.png" alt="">
+                    <p>Свитера и трикотаж</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/topicImage4.png" alt="">
-                    <p>Стильные сапоги</p>
+                    <img src="/html/source/img/forHim/topicImage4.png" alt="">
+                    <p>Зимние пальто</p>
                 </a>
             </div>
         </div>
