--- a/html/_header.html
+++ b/html/_header.html
@@ -10,8 +10,8 @@
             <h1 class="d-flex justify-content-center align-items-end"><a href="">F<span>AShi</span>ON</a></h1>
             <div class="navbar-wrapper d-flex justify-content-center">
                 <ul class="navbar d-inline-flex justify-content-between">
-                    <li><a href="">Для нее</a></li>
-                    <li><a href="">Для него</a></li>
+                    <li><a href="Index.html">Для нее</a></li>
+                    <li><a href="IndexForHim.html">Для него</a></li>
                     <li><a href="">Для детей</a></li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="search-wrapper d-flex flex-row align-items-center">
-                    <input type="search" id="" name="" placeholder="Поиск">
+                    <input type="search" id="search" name="" placeholder="Поиск">
                     <div class="search-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="rgba(80, 80, 80, 0.5)" class="bi bi-search" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
