UPDATE: Added Product.html with template structure, but without  content

--- a/html/Index.html
+++ b/html/Index.html
@@ -38,7 +38,7 @@
                             <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                         </svg>
                     </button>
-                    <a href="">
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod1.png" alt="">
                         </div>
@@ -64,7 +64,7 @@
                             <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                         </svg>
                     </button>
-                    <a href="">
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod2.png" alt="">
                         </div>
@@ -90,7 +90,7 @@
                             <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                         </svg>
                     </button>
-                    <a href="">
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod3.png" alt="">
                         </div>
@@ -116,7 +116,7 @@
                             <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                         </svg>
                     </button>
-                    <a href="">
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod4.png" alt="">
                         </div>
@@ -172,12 +172,12 @@
         <h3>Прозрачные ткани</h3>
         <div class="cards-wrapper d-flex flex-wrap justify-content-between">
             <div class="card">
-                <button type="button" class="favourite d-flex flex-row-reverse justify-content-end">
+                <button type="button" title="Add to fabourite" class="favourite d-flex flex-row-reverse justify-content-end">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                         <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                     </svg>
                 </button>
-                <a href="">
+                <a href="Product.html">
                     <div class="card-body d-flex flex-column">
                         <img src="/html/source/img/prod5.png" alt="">
                     </div>
@@ -203,7 +203,7 @@
                         <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                     </svg>
                 </button>
-                <a href="">
+                <a href="Product.html">
                     <div class="card-body d-flex flex-column">
                         <img src="/html/source/img/prod6.png" alt="">
                     </div>
@@ -229,7 +229,7 @@
                         <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                     </svg>
                 </button>
-                <a href="">
+                <a href="Product.html">
                     <div class="card-body d-flex flex-column">
                         <img src="/html/source/img/prod7.png" alt="">
                     </div>
@@ -255,7 +255,7 @@
                         <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                     </svg>
                 </button>
-                <a href="">
+                <a href="Product.html">
                     <div class="card-body d-flex flex-column">
                         <img src="/html/source/img/prod8.png" alt="">
                     </div>
@@ -354,7 +354,7 @@
                 <div class="body">
                     <div class="mail-sub d-flex flex-column">
                         <div class="checkbox-wrapper d-flex">
-                            <input type="checkbox" name="" id="mail" title="Почта" checked>
+                            <input type="checkbox" name="" id="mail" title="Почта">
                             <p>Почта</p>
                         </div>
                         <input type="text" placeholder="Email" id="email" autocomplete="email">
@@ -364,7 +364,7 @@
                             <input type="checkbox" name="" id="sms" title="СМС">
                             <p>СМС</p>
                         </div>
-                        <input type="tel" placeholder="8..." id="phone" autocomplete="tel" hidden>
+                        <input type="tel" placeholder="8..." id="phone" autocomplete="tel">
                     </div>
                     <button type="submit">Подписаться</button>
                     <p>Регестрируясь, вы соглашаетесь получать маркетинговые сообщения по электронной почте и/или по СМС и подтверждаете, что ознакомились с "<a href="">Политикой конфеденциальности</a>". Чтобы отказаться от рассылки, нажмите на кнопку "Отписаться" в конце письма или ответьте STOP на наше СМС-сообщение</p>
