UPDATE: Added modal for imgs. ERROR: fix favourite button.

--- a/html/_header.html
+++ b/html/_header.html
@@ -23,13 +23,13 @@
         <div class="navbar-and-search-wrapper d-flex">
             <ul class="navbar d-inline-flex flex-fill justify-content-between align-content-end">
                 <li>
-                    <button class="navbar" type="button" data-bs-toggle="collapse" data-bs-target="#presents-external-content" 
+                    <button class="navbar collapse-btn" type="button" data-bs-toggle="collapse" data-bs-target="#presents-external-content" 
                         aria-controls="presents-external-content" aria-expanded="false" aria-label="Toggle navigation">
                         Подарки
                     </button>
                 </li>
                 <li>
-                    <button class="navbar" type="button" data-bs-toggle="collapse" data-bs-target="#new-external-content" 
+                    <button class="navbar collapse-btn" type="button" data-bs-toggle="collapse" data-bs-target="#new-external-content" 
                         aria-controls="presents-external-content" aria-expanded="false" aria-label="Toggle navigation">
                         Новинки
                     </button>
