--- a/html/Product.html
+++ b/html/Product.html
@@ -113,32 +113,47 @@
             <img class="main-img" src="/html/source/img/product/prodImg3.png" alt="">
         </div>
         <div class="modal fade" id="imgsModal" tabindex="-1" aria-labelledby="imgsModalLabel" aria-hidden="true">
-            <div class="modal-dialog" style="height: 400px; width: 600px;">
+            <div class="modal-dialog modal-dialog-centered modal-xl">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="imgsModalLabel">Imgs title</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-
+                        <div id="imgsCarouselIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#imgsCarouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#imgsCarouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#imgsCarouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                              <button type="button" data-bs-target="#imgsCarouselIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                              <button type="button" data-bs-target="#imgsCarouselIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                            </div>
+                            <div class="carousel-inner">
+                              <div class="carousel-item justify-content-center active">
+                                <img src="/html/source/img/product/prodImg1.png" class="d-block" alt="...">
+                              </div>
+                              <div class="carousel-item justify-content-center">
+                                <img src="/html/source/img/product/prodImg2.png" class="d-block" alt="...">
+                              </div>
+                              <div class="carousel-item justify-content-center">
+                                <img src="/html/source/img/product/prodImg3.png" class="d-block" alt="...">
+                              </div>
+                              <div class="carousel-item justify-content-center">
+                                <img src="/html/source/img/product/prodImg4.png" class="d-block" alt="...">
+                              </div>
+                              <div class="carousel-item justify-content-center">
+                                <img src="/html/source/img/product/prodImg5.png" class="d-block" alt="...">
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#imgsCarouselIndicators" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#imgsCarouselIndicators" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="imgsModal" tabindex="-1" aria-labelledby="imgsModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="imgsModalLabel">Imgs modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"></button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
