--- a/html/_header.html
+++ b/html/_header.html
@@ -53,11 +53,11 @@
                         </a>
                     </div>
                     <div class="person-icon">
-                        <a href="">
+                        <button type="button" title="Профиль" data-bs-toggle="modal" data-bs-target="#sign-in">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                                 <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                             </svg>
-                        </a>
+                        </button>
                     </div>
                     <div class="favourite-icon">
                         <a href="">
@@ -91,7 +91,7 @@
                 <div class="navbar d-flex flex-column justify-content-start">
                     <h3>Подарки</h3>
                     <ul>
-                        <li><a href="">Подарки-бестселлеры</a></li>
+                        <li><a href="prodList.html">Подарки-бестселлеры</a></li>
                         <li><a href="">Приятные мелочи</a></li>
                         <li><a href="">Лучшие аксессуары</a></li>
                         <li><a href="">Культовые сумки pre-owned</a></li>
@@ -161,6 +161,66 @@
                     <p>Актуально</p>
                     <h3>Новая классика</h3>
                     <a href="">Посмотреть подборку</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="sign-in" tabindex="-1" aria-labelledby="signInModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h5 class="modal-title">Войдите или создайте аккаунт</h5>
+                    <div class="btns-wrapper d-flex flex-row justify-content-between">
+                        <button type="button" data-bs-target="#sign-in-form" class="selected">Войти</button>
+                        <button type="button" data-bs-target="#reg-form">Создать аккаунт</button>
+                    </div>
+                    <form id="sign-in-form" action="sign-in" method="post" class="d-flex flex-column justify-content-between">
+                        <div class="email-wrapper d-flex flex-column">
+                            <label for="loginEmail">Email</label>
+                            <input type="email" name="Email" id="loginEmail">
+                        </div>
+                        <div class="pass-wrapper d-flex flex-column">
+                            <label for="loginPass">Пароль</label>
+                            <input type="password" name="pass" id="loginPass">
+                        </div>
+                        <button type="submit">Войти</button>
+                    </form>
+                    <form id="reg-form" action="register" method="post" class="d-flex flex-column justify-content-between visually-hidden">
+                        <div class="name-wrapper d-flex flex-column">
+                            <label for="name">Имя</label>
+                            <input type="text" name="Name" id="name">
+                        </div>
+                        <div class="email-wrapper d-flex flex-column">
+                            <label for="regEmail">Email</label>
+                            <input type="email" name="Email" id="regEmail">
+                        </div>
+                        <div class="pass-wrapper d-flex flex-column">
+                            <label for="regPass">Пароль</label>
+                            <input type="password" name="pass" id="regPass">
+                        </div>
+                        <p>Регистрируясь, вы вступаете в программу и соглашаетесь с документами "Условия пользования" и "Политика конфиденциальности".</p>
+                        <div class="subcscribe-wrapper d-flex flex-column">
+                            <input type="checkbox" name="Subscribe" id="subscribe">
+                            <label for="subscribe">Подписаться на рассылку, чтобы не пропускать новые привелегии и коллекции любимых брендов.</label>
+                        </div>
+                        <button type="submit">Зарегистрироваться</button>
+                    </form>
+                    <div class="sign-in-separator">
+                        <p>или</p>
+                    </div>
+                    <div class="oauth-btns d-flex flex-column">
+                        <div class="google-btn oauth-btn d-flex flex-row">
+                            <button type="button">Войти через Google</button>
+                            <img src="/html/source/logos/google-logo.svg" alt="">
+                        </div>
+                        <div class="vk-btn oauth-btn d-flex flex-row">
+                            <button type="button">Войти через ВКонтакте</button>
+                            <img src="/html/source/logos/vk-logo.svg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
