--- a/html/IndexForHim.html
+++ b/html/IndexForHim.html
@@ -9,7 +9,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
     <link rel="stylesheet" href="/html/css/Index.css">
-    <link rel="stylesheet" href="/html/css/utilities.css">
+    <link rel="stylesheet" href="/html/css/_utilities.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
