UPDATE: Added Account.html with account topic links and styles. Fixed Index.html order-topic header.

--- a/html/Index.html
+++ b/html/Index.html
@@ -324,7 +324,7 @@
                     </div>
                     <div class="text">
                         <p class="topic-header">Как сделать заказ</p>
-                        <p class="topic-description">Подробная интсрукция для новых клиентов</p>
+                        <p class="topic-description">Подробная инструкция для новых клиентов</p>
                     </div>
                 </div>
             </a>
