--- a/html/ProdList.html
+++ b/html/ProdList.html
@@ -525,7 +525,7 @@
                     <span id="currentPage">1</span> из <span id="totalPages">3</span>
                 </div>
                 <div class="cards-list-footer-btns d-inline-flex flex-column align-items-end">
-                    <button type="button" onclick="topFunction()" class="up-btn" title="Наверх">
+                    <button type="button" onclick="goTop()" class="up-btn" title="Наверх">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708z"/>
                           </svg>
@@ -858,6 +858,6 @@
     </main>
     <div id="footer"></div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-    <script src="/html/js/Index.js"></script>
+    <script src="/html/js/ProdList.js"></script>
 </body>
 </html>
